--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -16,10 +16,10 @@
 
     <div class="row">
 
-      <div class="col-xs-2">
+      <div class="col-xs-3">
         <div class="form-group">
           <%= schedule_form.label :device_uid %>
-          <%= schedule_form.select(:device_uid, {}, { include_blank: '- Select device -' }, { class: 'form-control' }) do %>
+          <%= schedule_form.select(:device_uid, {}, { include_blank: '- Select device -' }, { class: 'form-control schedule-device-selection' }) do %>
             <% if @availiable_devices.any? %>
               <% options_for_select(@availiable_devices, schedule.device_uid) %>
             <% end %>
@@ -43,7 +43,7 @@
         </div>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-xs-2">
         <div class="form-group">
           <%= schedule_form.label :repeat_every %>
           <%= schedule_form.select(:repeat_every, {}, { include_blank: '- Select period -' }, { class: 'form-control' }) do %>
@@ -70,6 +70,7 @@
     <div class="actions">
       <%= schedule_form.submit %>
     </div>
+
   <% end %>
 
 </div>
