Save new schedule with actions

--- a/app/views/actions/_action_form.erb
+++ b/app/views/actions/_action_form.erb
@@ -40,12 +40,8 @@
 
   <div class="actions-container">
     <% if !event.nil? %>
-      <%= render partial: '/actions/action_form_element', collection: event.actions %>
+      <%= render partial: '/actions/action_form_element', collection: event.actions, as: :action %>
     <% end %>
   </div>
 
-</div>
-
-<div id="action-template" class="hidden">
-  <%= render partial: '/actions/action_form_element', locals: { action: Action.new } %>
 </div>
