--- a/app/views/actions/_action_form_element.erb
+++ b/app/views/actions/_action_form_element.erb
@@ -1,9 +1,24 @@
 <% action_index = (defined? action_counter) ? action_counter : 'INDEX' %>
-<% prefix = 'action' %> <!-- Give prefix from previous calls -->
+<% prefix = 'actions' %>
+
+
+
 
 <div class="action form-row" data-index="<%= action_index %>">
 
   <%= fields_for prefix, action, index: action_index do |action_form| %>
+
+    <% if action.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(action.errors.count, "error") %> prohibited this
+          schedule from being saved:</h2>
+        <ul>
+          <% action.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
     <%= action_form.hidden_field :id %>
 
@@ -12,7 +27,7 @@
       <div class="col-xs-2">
         <div class="form-group">
           <%= action_form.select(:property_id, {}, {}, { class: 'form-control', id: 'action-properties-select-box' }) do %>
-            <% options_for_select([['tas', '1']], action.property_id) %>
+            <% options_for_select(@selected_device_properties, action.property_id) %>
           <% end %>
         </div>
       </div>
