--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -74,3 +74,7 @@
   <% end %>
 
 </div>
+
+<div id="action-template" class="hidden">
+  <%= render partial: '/actions/action_form_element', locals: { action: Action.new } %>
+</div>
