--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -63,7 +63,7 @@
 
     <hr/>
 
-    <%= render partial: '/actions/action_form', locals: { event: schedule.event } %>
+    <%= render partial: '/actions/action_form', locals: { actions: schedule.actions } %>
 
     <hr/>
 
