--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <!-- ACTIONS -->
-<% if !@schedule.event.nil? && @schedule.event.actions.any? %>
+<% if @schedule.actions.any? %>
   <div class="panel panel-default">
 
     <div class="panel-heading">
@@ -17,7 +17,7 @@
 
     <div class="panel-body">
 
-      <% @schedule.event.actions.each do |action| %>
+      <% @schedule.actions.each do |action| %>
         <div class="row">
 
           <div class="col-xs-4">
