Get url from data-* attribute on JS | Small fixes

--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -1,3 +1,5 @@
+<div id="get-device-properties-list-url" class="hidden" data-url="<%= device_url('DEVICE_ID') + '/get_properties_list' %>"></div>
+
 <div id="schedule-form-container">
 
   <%= form_for(schedule, html: { id: 'schedule-form' }) do |schedule_form| %>
