--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,27 +2,34 @@
 <html>
 <head>
   <title><%= full_title(yield(:title)) %></title>
-  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': true %>
   <%= csrf_meta_tags %>
   <%= render 'layouts/shim' %>
 </head>
 <body>
 <%= render 'layouts/header' %>
+
 <div class="container">
   <% flash.each do |key, value| %>
     <%= content_tag(:div, value, class: "alert alert-#{key}") %>
   <% end %>
+
   <%= yield %>
+
   <%= render 'layouts/footer' %>
-  <%= debug(Time.new.zone) %>
-  <%= debug(RUBY_VERSION) if Rails.env.development? %>
-  <%= debug(user_signed_in?.inspect) if Rails.env.development? %>
-  <%= debug(current_user.devices.inspect) if user_signed_in? if Rails.env.development? %>
-  <%= debug(user_session.inspect) if Rails.env.development? %>
-  <%= debug(instance_variables) if Rails.env.development? %>
-  <%= debug(local_variables) if Rails.env.development? %>
-  <%= debug(params) if Rails.env.development? %>
+
+  <div>
+    <%= debug(Time.new.zone) if Rails.env.development? %>
+    <%= debug(RUBY_VERSION) if Rails.env.development? %>
+    <%= debug(user_signed_in?.inspect) if Rails.env.development? %>
+    <%= debug(current_user.devices.inspect) if user_signed_in? if Rails.env.development? %>
+    <%= debug(user_session.inspect) if Rails.env.development? %>
+    <%= debug(instance_variables) if Rails.env.development? %>
+    <%= debug(local_variables) if Rails.env.development? %>
+    <%= debug(params) if Rails.env.development? %>
+  </div>
+
 </div>
 </body>
 </html>
