--- a/app/views/devices/_device_attribute_form.html.erb
+++ b/app/views/devices/_device_attribute_form.html.erb
@@ -1,44 +1,43 @@
-<div class="device-properties-header">
+<div class="device-attributes-header">
 
   <div class="row">
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label Property, :name, 'Prop Name' %>
+        <%= label DeviceAttribute, :name, 'Prop Name' %>
       </div>
     </div>
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label Property, :value_type_id %>
+        <%= label DeviceAttribute, :value_type_id %>
       </div>
     </div>
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label Property, :value_min %>
+        <%= label DeviceAttribute, :min_value %>
       </div>
     </div>
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label Property, :value_max %>
+        <%= label DeviceAttribute, :max_value %>
       </div>
     </div>
 
 
     <div class="col-xs-2">
       <div class="field form-group">
-        <%= label Property, :value %>
+        <%= label DeviceAttribute, :set_value %>
       </div>
     </div>
 
     <div class="col-xs-1">
       <div class="field form-group">
-        <%= label Property, :auto %>
+        <%= label DeviceAttribute, :current_value %>
       </div>
     </div>
-
 
     <div class="col-xs-1">
       <div class="field form-group">
@@ -50,6 +49,6 @@
 
 </div>
 
-<div class="device-properties-container">
-  <%= render partial: 'device_property_form_element', collection: properties, as: 'device_property' %>
+<div class="device-attributes-container">
+  <%= render partial: 'device_attribute_form_element', collection: device_attributes, as: 'device_attribute' %>
 </div>
