--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -1,4 +1,4 @@
-<div id="get-device-properties-list-url" class="hidden" data-url="<%= device_url('DEVICE_ID') + '/get_properties_list' %>"></div>
+<div id="get-device-attributes-list-url" class="hidden" data-url="<%= device_url('DEVICE_ID') + '/get_device_attributes_list' %>"></div>
 
 <div id="schedule-form-container">
 
