--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -21,11 +21,11 @@
         <div class="row">
 
           <div class="col-xs-4">
-            <%= action.property.name %>
+            <%= action.device_attribute.name %>
           </div>
 
           <div class="col-xs-4">
-            <%= action.property_value %>
+            <%= action.attribute_value %>
           </div>
 
         </div>
