--- a/app/views/actions/_action_form.erb
+++ b/app/views/actions/_action_form.erb
@@ -18,13 +18,13 @@
 
       <div class="col-xs-2">
         <div class="field form-group">
-          <%= label(Action, :property_id, 'Property') %>
+          <%= label(Action, :attribute_id, 'Attribute') %>
         </div>
       </div>
 
       <div class="col-xs-2">
         <div class="field form-group">
-          <%= label(Action, :property_value, 'Property Value') %>
+          <%= label(Action, :attribute_value, 'Attribute Value') %>
         </div>
       </div>
 
