--- a/app/views/admin/_value_type_form.erb
+++ b/app/views/admin/_value_type_form.erb
@@ -16,25 +16,37 @@
     <div id="value-types-header">
       <div class="row">
 
-        <div class="col-xs-3">
+        <div class="col-xs-2">
           <div class="form-group">
             <%= label ValueType, :name %>
           </div>
         </div>
 
-        <div class="col-xs-3">
+        <div class="col-xs-2">
           <div class="form-group">
             <%= label ValueType, :primitive_type_id %>
           </div>
         </div>
 
-        <div class="col-xs-3">
+        <div class="col-xs-2">
           <div class="form-group">
             <%= label ValueType, :unsigned %>
           </div>
         </div>
 
-        <div class="col-xs-3">
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= label ValueType, :min_value %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= label ValueType, :max_value %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
           <div class="form-group">
             <label>Actions</label>
           </div>
