--- a/app/views/admin/_value_type_form_element.html.erb
+++ b/app/views/admin/_value_type_form_element.html.erb
@@ -23,13 +23,13 @@
 
       <div class="row">
 
-        <div class="col-xs-3">
+        <div class="col-xs-2">
           <div class="form-group">
             <%= value_type_form.text_field :name, class: 'form-control' %>
           </div>
         </div>
 
-        <div class="col-xs-3">
+        <div class="col-xs-2">
           <div class="form-group">
             <%= value_type_form.select(:primitive_type_id, {}, {}, { class: 'form-control' }) do %>
               <% options_for_select(@primitive_types, value_type.primitive_type_id) %>
@@ -37,13 +37,25 @@
           </div>
         </div>
 
-        <div class="col-xs-3">
+        <div class="col-xs-2">
           <div class="form-group">
             <%= value_type_form.check_box :unsigned, class: 'form-control' %>
           </div>
         </div>
 
-        <div class="col-xs-3">
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= value_type_form.text_field :min_value, class: 'form-control' %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= value_type_form.text_field :max_value, class: 'form-control' %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
           <div class="form-group">
             <button type="button" class="action-button active remove-form-row form-control">X</button>
           </div>
