--- a/app/views/devices/_device_attribute_form.html.erb
+++ b/app/views/devices/_device_attribute_form.html.erb
@@ -2,45 +2,44 @@
 
   <div class="row">
 
-    <div class="col-xs-2">
-      <div class="field form-group">
+    <div class="col-xs-3">
+      <div class="form-group">
         <%= label DeviceAttribute, :name, 'Prop Name' %>
       </div>
     </div>
 
     <div class="col-xs-2">
-      <div class="field form-group">
+      <div class="form-group">
         <%= label DeviceAttribute, :value_type_id %>
       </div>
     </div>
 
     <div class="col-xs-2">
-      <div class="field form-group">
+      <div class="form-group">
         <%= label DeviceAttribute, :min_value %>
       </div>
     </div>
 
     <div class="col-xs-2">
-      <div class="field form-group">
+      <div class="form-group">
         <%= label DeviceAttribute, :max_value %>
       </div>
     </div>
 
-
-    <div class="col-xs-2">
-      <div class="field form-group">
+    <div class="col-xs-1">
+      <div class="form-group">
         <%= label DeviceAttribute, :set_value %>
       </div>
     </div>
 
     <div class="col-xs-1">
-      <div class="field form-group">
+      <div class="form-group">
         <%= label DeviceAttribute, :current_value %>
       </div>
     </div>
 
     <div class="col-xs-1">
-      <div class="field form-group">
+      <div class="form-group">
         <label>Action</label>
       </div>
     </div>
