--- a/app/views/devices/_device_attribute_form_element.html.erb
+++ b/app/views/devices/_device_attribute_form_element.html.erb
@@ -6,8 +6,7 @@
   <% if device_attribute.errors.any? %>
     <div id="error-explanation">
       <h2><%= pluralize(device_attribute.errors.count, 'error') %> prohibited
-        this
-        device attribute from being valid:</h2>
+        this device attribute from being valid:</h2>
       <ul>
         <% device_attribute.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -16,21 +15,21 @@
     </div>
   <% end %>
 
-  <%= fields_for prefix, device_attribute, index: device_attribute_index do |attribute_form| %>
+  <%= fields_for prefix, device_attribute, index: device_attribute_index do |device_attribute_form| %>
 
-    <%= attribute_form.hidden_field :id %>
+    <%= device_attribute_form.hidden_field :id %>
 
     <div class="row">
 
-      <div class="col-xs-2">
+      <div class="col-xs-3">
         <div class="form-group">
-          <%= attribute_form.text_field :name, class: 'form-control' %>
+          <%= device_attribute_form.text_field :name, class: 'form-control' %>
         </div>
       </div>
 
       <div class="col-xs-2">
         <div class="form-group">
-          <%= attribute_form.select(:value_type_id, {}, {}, { class: 'form-control' }) do %>
+          <%= device_attribute_form.select(:value_type_id, {}, {}, { class: 'form-control' }) do %>
             <% options_for_select(@value_types, device_attribute.value_type_id) %>
           <% end %>
         </div>
@@ -38,25 +37,25 @@
 
       <div class="col-xs-2">
         <div class="form-group">
-          <%= attribute_form.number_field :min_value, class: 'form-control' %>
+          <%= device_attribute_form.number_field(:min_value, class: 'form-control') %>
         </div>
       </div>
 
       <div class="col-xs-2">
         <div class="form-group">
-          <%= attribute_form.number_field :max_value, class: 'form-control' %>
-        </div>
-      </div>
-
-      <div class="col-xs-2">
-        <div class="form-group">
-          <%= attribute_form.text_field :set_value, class: 'form-control' %>
+          <%= device_attribute_form.number_field :max_value, class: 'form-control' %>
         </div>
       </div>
 
       <div class="col-xs-1">
         <div class="form-group">
-          <%= attribute_form.text_field :current_value, class: 'form-control' %>
+          <%= device_attribute_form.text_field :set_value, class: 'form-control' %>
+        </div>
+      </div>
+
+      <div class="col-xs-1">
+        <div class="form-group">
+          <%= device_attribute.current_value.nil? ? '-' : device_attribute.current_value %>
         </div>
       </div>
 
