--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -44,13 +44,15 @@
     <hr/>
 
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-3"></div>
+      <div class="col-xs-6">
         <div class="form-group">
           <button type="button" class="action-button active add-new-device-attribute form-control">
-            <span>Add New Device Attribute</span>
+            <span>Add Device Attribute</span>
           </button>
         </div>
       </div>
+      <div class="col-xs-3"></div>
     </div>
 
     <%= render partial: 'device_attribute_form', locals: { device_attributes: device.device_attributes } %>
