--- a/app/views/devices/show.html.erb
+++ b/app/views/devices/show.html.erb
@@ -15,51 +15,123 @@
   <div class="panel-body">
     <div>
       <strong>Last contact at:</strong>
-      <%= @device.last_contact_at %>
+      <%= @device.last_contact_at.nil? ? 'No contact yet' : @device.last_contact_at %>
     </div>
   </div>
 </div>
 
 <!-- DEVICE ATTRIBUTES -->
-<% if !@device.device_attributes.empty? %>
+<% if @device.device_attributes.any? %>
   <div class="panel panel-default">
-
     <div class="panel-heading">
       <h3 class="panel-title">Device Attributes</h3>
     </div>
-
     <div class="panel-body">
+
+      <div class="row">
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= label DeviceAttribute, :name, 'Prop Name' %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= label DeviceAttribute, :value_type_id %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= label DeviceAttribute, :min_value %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= label DeviceAttribute, :max_value %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= label DeviceAttribute, :set_value %>
+          </div>
+        </div>
+
+        <div class="col-xs-2">
+          <div class="form-group">
+            <%= label DeviceAttribute, :current_value %>
+          </div>
+        </div>
+      </div>
 
       <% @device.device_attributes.each do |device_attribute| %>
         <div class="row">
 
-          <div class="col-xs-4">
-            <%= device_attribute.name %>
+          <div class="col-xs-2">
+            <div class="form-group">
+              <%= device_attribute.name %>
+            </div>
           </div>
 
-          <div class="col-xs-4">
-            <%= device_attribute.set_value %>
+          <div class="col-xs-2">
+            <div class="form-group">
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="form-group">
+              <%= device_attribute.min_value.nil? ? '-' : device_attribute.min_value %>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="form-group">
+              <%= device_attribute.max_value.nil? ? '-' : device_attribute.max_value %>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="form-group">
+              <span class="editable-device-attribute-set-value">
+                <%= device_attribute.set_value.nil? ? '-' : device_attribute.set_value %>
+              </span>
+            </div>
+          </div>
+
+          <div class="col-xs-1">
+            <div class="form-group">
+              <%= device_attribute.current_value.nil? ? '-' : device_attribute.current_value %>
+            </div>
+          </div>
+          <div class="col-xs-1">
+            <div class="form-group">
+              <button type="button" class="btn btn-default" aria-label="Left Align">
+                <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+              </button>
+            </div>
           </div>
 
         </div>
       <% end %>
-
     </div>
-
   </div>
 <% end %>
 
-<!-- INFO -->
+<!-- SYSTEM INFO FOR DEVICE -->
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">System info for device</h3>
   </div>
   <div class="panel-body">
 
-    <div>
-      <strong>Description:</strong>
-      <%= @device.description %>
-    </div>
+    <% if !@device.description.empty? %>
+      <div>
+        <strong>Description:</strong>
+        <%= @device.description %>
+      </div>
+    <% end %>
 
     <div>
       <strong>Serial No:</strong>
@@ -75,44 +147,46 @@
 </div>
 
 <!-- INFO FROM DEVICE -->
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Device info</h3>
-  </div>
-  <div class="panel-body">
+<!--<div class="panel panel-default">-->
+<!--<div class="panel-heading">-->
+<!--<h3 class="panel-title">Device info</h3>-->
+<!--</div>-->
+<!--<div class="panel-body">-->
 
-    <% @device.device_stats.each do |stat| %>
+<!--
+<% @device.device_stats.each do |stat| %>-->
 
-      <div class="row">
+  <!--<div class="row">-->
 
-        <div class="col-xs-4">
-          <%= stat.label %>:
-        </div>
+  <!--<div class="col-xs-4">-->
+  <%= stat.label %>:
+  <!--</div>-->
 
-        <div class="col-xs-4">
-          <%= stat.value %>
-        </div>
+  <!--<div class="col-xs-4">-->
+  <!--<%= stat.value %>-->
+  <!--</div>-->
 
-        <div class="col-xs-4">
-          (<%= stat.last_update_at %>)
-        </div>
+  <!--<div class="col-xs-4">-->
+  <!--(<%= stat.last_update_at %>)-->
+  <!--</div>-->
 
-      </div>
+  <!--</div>-->
 
-    <% end %>
+  <!--
+<% end %>-->
 
-  </div>
-</div>
+<!--</div>-->
+<!--</div>-->
 
 <!-- DEVICE'S SCHEDULES -->
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Device's schedules</h3>
-  </div>
-  <div class="panel-body">
+<!--<div class="panel panel-default">-->
+<!--<div class="panel-heading">-->
+<!--<h3 class="panel-title">Device's schedules</h3>-->
+<!--</div>-->
+<!--<div class="panel-body">-->
 
-  </div>
-</div>
+<!--</div>-->
+<!--</div>-->
 
 <%= link_to 'Edit', edit_device_path(@device) %> |
 <%= link_to 'Back', devices_path %>
