Use yarn instead of gems for js src | Update gems

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,12 +11,34 @@
  * It is generally better to create a new file per style scope.
  *
  */
-@import 'bootstrap-sprockets';
 @import 'bootstrap';
-@import 'bootstrap-datetimepicker';
+@import 'eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker';
+@import 'x-editable/dist/bootstrap3-editable/css/bootstrap-editable';
+@import 'fullcalendar/dist/fullcalendar';
+
+///* Override Bootstrap 3 font locations */
+//@font-face {
+//  font-family: 'Glyphicons Halflings';
+//  src: url('../assets/glyphicons-halflings-regular.eot');
+//  src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+//  url('../assets/glyphicons-halflings-regular.woff') format('woff'),
+//  url('../assets/glyphicons-halflings-regular.ttf') format('truetype'),
+//  url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+//}
+
+@font-face {
+  font-family: 'Glyphicons Halflings';
+  src: asset-url('bootstrap/fonts/glyphicons-halflings-regular.eot');
+  src: asset-url('bootstrap/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
+  asset-url('bootstrap/fonts/glyphicons-halflings-regular.woff') format('woff'),
+  asset-url('bootstrap/fonts/glyphicons-halflings-regular.ttf') format('truetype'),
+  asset-url('bootstrap/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
+}
 
 /* mixins, variables, etc. */
-
+$gray: #eaea88;
+$gray-darker: #eaeaff;
+$gray-light: #eaeaef;
 $gray-medium-light: #eaeaea;
 
 @mixin box_sizing {
