--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -25,7 +25,7 @@
           </div>
 
           <div class="col-xs-4">
-            <%= action.attribute_value %>
+            <%= action.device_attribute_value %>
           </div>
 
         </div>
