--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,20 +12,11 @@
  *
  */
 @import 'bootstrap';
-@import 'eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker';
+@import 'bootstrap-datetimepicker';
 @import 'x-editable/dist/bootstrap3-editable/css/bootstrap-editable';
 @import 'fullcalendar/dist/fullcalendar';
 
-///* Override Bootstrap 3 font locations */
-//@font-face {
-//  font-family: 'Glyphicons Halflings';
-//  src: url('../assets/glyphicons-halflings-regular.eot');
-//  src: url('../assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'),
-//  url('../assets/glyphicons-halflings-regular.woff') format('woff'),
-//  url('../assets/glyphicons-halflings-regular.ttf') format('truetype'),
-//  url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
-//}
-
+/* Override Bootstrap 3 font locations */
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: asset-url('bootstrap/fonts/glyphicons-halflings-regular.eot');
