--- a/app/views/actions/_action_form_element.erb
+++ b/app/views/actions/_action_form_element.erb
@@ -10,7 +10,7 @@
 
     <% if action.errors.any? %>
       <div id="error_explanation">
-        <h2><%= pluralize(action.errors.count, "error") %> prohibited this
+        <h2><%= pluralize(action.errors.count, 'error') %> prohibited this
           schedule from being saved:</h2>
         <ul>
           <% action.errors.full_messages.each do |message| %>
@@ -26,15 +26,15 @@
 
       <div class="col-xs-2">
         <div class="form-group">
-          <%= action_form.select(:attribute_id, {}, {}, { class: 'form-control', id: 'action-device-attributes-select-box' }) do %>
-            <% options_for_select(@selected_device_attributes, action.attribute_id) %>
+          <%= action_form.select(:device_attribute_id, {}, {}, { class: 'form-control', id: 'action-device-attributes-select-box' }) do %>
+            <% options_for_select(@selected_device_attributes, action.device_attribute_id) %>
           <% end %>
         </div>
       </div>
 
       <div class="col-xs-2">
         <div class="form-group">
-          <%= action_form.text_field :attribute_value, class: 'form-control' %>
+          <%= action_form.text_field :device_attribute_value, class: 'form-control' %>
         </div>
       </div>
 
