--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -6,7 +6,7 @@
 
     <% if schedule.errors.any? %>
       <div id="error_explanation">
-        <h2><%= pluralize(schedule.errors.count, "error") %> prohibited this
+        <h2><%= pluralize(schedule.errors.count, 'error') %> prohibited this
           schedule from being saved:</h2>
         <ul>
           <% schedule.errors.full_messages.each do |message| %>
