--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -4,8 +4,9 @@
   <h1>Schedules</h1>
 </div>
 
-<div class="calendar"></div>
+<%= render 'schedule_modal', schedule: @schedule %>
 
+<div class="calendar"></div>
 
 <div class="row">
   <div class="col-xs-5"><b>Device</b></div>
