--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
 @import 'bootstrap';
 @import 'eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker';
 @import 'fullcalendar/dist/fullcalendar';
-@import 'x-editable/dist/bootstrap3-editable/css/bootstrap-editable';
+//@import 'x-editable/dist/bootstrap3-editable/css/bootstrap-editable';
 
 /* hot fix for datepicker not displayed */
 div.datepicker-days {
