--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -17,8 +17,7 @@
     <% end %>
 
     <div class="row">
-
-      <div class="col-xs-3">
+      <div class="col-xs-6">
         <div class="form-group">
           <%= schedule_form.label :device_uid %>
           <%= schedule_form.select(:device_uid, {}, { include_blank: '- Select device -' }, { class: 'form-control schedule-device-selection' }) do %>
@@ -28,15 +27,21 @@
           <% end %>
         </div>
       </div>
-
-      <div class="col-xs-3">
+      <div class="col-xs-6">
         <div class="form-group">
           <%= schedule_form.label :datetime %>
-          <%= schedule_form.datetime_select :datetime, class: 'form-control' %>
+          <div class="input-group">
+            <%= schedule_form.text_field(:datetime, { class: 'form-control', 'aria-describedby': 'schedule-datetime-calendar-addon' }) %>
+            <span class="input-group-addon" id="schedule-datetime-calendar-addon">
+              <span class="glyphicon glyphicon-calendar"></span>
+            </span>
+          </div>
         </div>
       </div>
+    </div>
 
-      <div class="col-xs-2">
+    <div class="row">
+      <div class="col-xs-4">
         <div class="form-group">
           <%= schedule_form.label :is_recurrent %>
           <div class="checkbox checkbox-primary">
@@ -44,8 +49,13 @@
           </div>
         </div>
       </div>
-
-      <div class="col-xs-2">
+      <div class="col-xs-4">
+        <div class="form-group">
+          <%= schedule_form.label :recurrence_period %>
+          <%= schedule_form.text_field :recurrence_period, class: 'form-control' %>
+        </div>
+      </div>
+      <div class="col-xs-4">
         <div class="form-group">
           <%= schedule_form.label :repeat_every %>
           <%= schedule_form.select(:repeat_every, {}, { include_blank: '- Select period -' }, { class: 'form-control' }) do %>
@@ -53,14 +63,6 @@
           <% end %>
         </div>
       </div>
-
-      <div class="col-xs-2">
-        <div class="form-group">
-          <%= schedule_form.label :recurrence_period %>
-          <%= schedule_form.text_field :recurrence_period, class: 'form-control' %>
-        </div>
-      </div>
-
     </div>
 
     <hr/>
