Add select2 | FIx schedules index
Fixing schedule form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
  *
  */
 @import 'bootstrap';
+@import 'select2/dist/css/select2';
 @import 'eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker';
 @import 'fullcalendar/dist/fullcalendar';
 @import 'x-editable/dist/bootstrap3-editable/css/bootstrap-editable';
