--- a/app/views/schedules/_schedule_form.html.erb
+++ b/app/views/schedules/_schedule_form.html.erb
@@ -1,7 +1,5 @@
 <div id="get-device-attributes-list-url" class="hidden" data-url="<%= device_url('DEVICE_ID') + '/get_device_attributes_list' %>"></div>
 
-<%= schedule.id %>
-
 <%
   form_options = {
       id:                'schedule-form',
@@ -69,31 +67,21 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col-xs-3">
         <div class="form-group">
-          <%= label(ScheduleEvent, :device_uid, 'Select device') %>
-          <%= select(ScheduleEvent, :device_uid, Device.all.collect {|p| [p.name, p.uid]}, { include_blank: '- Select device -' }, { id: 'add-new-event-to-schedule', name: nil, class: 'form-control' }) %>
+          <%= select(ScheduleEvent, :device_uid, Device.all.collect {|p| [p.name, p.uid]}, {}, { id: 'add-new-event-to-schedule', name: nil, class: 'form-control' }) %>
+        </div>
+      </div>
+      <div class="col-xs-3">
+        <div class="form-group">
+          <button type="button" class="action-button active add-new-event-to-schedule-button form-control">Add new event for this device</button>
         </div>
       </div>
     </div>
 
     <hr>
 
-    <!--EVENT DRAFT-->
-    <div class="event" data-id="1" data-device-uid="3245423534">
-      <div class="row">
-        <div class="col-xs-4">DEVICE NAME</div>
-        <div class="col-xs-4">REMOVE EVENT</div>
-        <div class="col-xs-4">ADD ACTION</div>
-      </div>
-    </div>
-
-    <% schedule_event = ScheduleEvent.new %>
-
-    <%= fields_for schedule_event do |se| %>
-      <%= se.label :device_uid %>
-      <%= se.text_field :device_uid %>
-    <% end %>
+    <%= render partial: '/schedules/schedule_event_form', collection: schedule.schedule_events, as: :schedule_event %>
 
   <% end %>
 
